--- a/style/style.css
+++ b/style/style.css
@@ -67,14 +67,14 @@ box-shadow: 6px 10px 53px -7px rgba(61,61,61,1);
   color: var(--text-color);
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
-.title {
-  font-size: 2rem;
-  padding: 0 0 1rem;
+.banner_title {
+  font-size: 2.5rem;
   color: var(--accent-color);
+  margin-bottom: 0;
 }
 
 .btn-container {
@@ -83,11 +83,12 @@ box-shadow: 6px 10px 53px -7px rgba(61,61,61,1);
   justify-content: center;
 }
 
-.btn {
+.create-btn {
   background-color: var(--bg-accent-color);
   color: var(--bg-white);
+  font-size: 1rem;
   padding: 0.2rem 1rem;
-  border-radius: 2px;
+  border-radius: 3px;
   margin: 1rem;
 }
 
@@ -116,5 +117,8 @@ box-shadow: 6px 10px 53px -7px rgba(61,61,61,1);
   background: var(--bg-main-color);
   text-align: center;
   background-color: var(--bg-light-blue);
+}
 
+.footer_copyright {
+  font-size: 1rem;
 }
