--- a/style/style.css
+++ b/style/style.css
@@ -10,9 +10,8 @@
   --text-accent-color: ;
   --text-edit-bg-color: #575757;
   --border-color: #3f3f3f;
-  --shadow-color: #202020;
-  --document-bg-color: #68686850;
-  --component-bg-gradient: radial-gradient(circle, #646464e6 0%, #363636e6 100%);
+  --shadow-color: #5b6185;
+  --document-bg-color: #8890be48;
   --smokywhite: #dddbd8;
   --light-purple: #b6a6e4;
   --black: #000000;
@@ -35,6 +34,9 @@ button {
   background: transparent;
 }
 
+dialog {
+  border: 0;
+}
 body {
   background: rgb(194, 177, 255);
   background: linear-gradient(180deg, rgba(194, 177, 255, 1) 0%, rgba(67, 61, 147, 1) 100%);
@@ -87,7 +89,7 @@ box-shadow: 6px 10px 53px -7px rgba(61,61,61,1);
   background-color: var(--bg-accent-color);
   color: var(--bg-white);
   font-size: 1rem;
-  padding: 0.2rem 1rem;
+  padding: 0.4rem 1rem;
   border-radius: 3px;
   margin: 1rem;
 }
@@ -138,14 +140,13 @@ box-shadow: 6px 10px 53px -7px rgba(61,61,61,1);
   background-color: var(--document-bg-color);
 }
 
+
 .dialog_container {
   display: flex;
   flex-direction: column;
   padding: 0.4em;
   width: 32em;
-  background: var(--bg-accent-color);
-  background: var(--component-bg-gradient);
-  border: 1px solid var(--border-color);
+  background: var(--bg-light-blue);
   border-radius: 0.5rem;
-  box-shadow: 2px 2px 20px var(--shadow-color);
+  box-shadow: 6px 10px 53px -7px var(--shadow-color);
 }
