--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,7 @@
   --bg-light-blue: #f2f6fe;
   --accent-color: #433d93;
   --text-color: #433d93;
+  --text-off-white: #f5f5f5;
   --text-accent-color: ;
   --text-edit-bg-color: #575757;
   --border-color: #3f3f3f;
@@ -58,9 +59,9 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  -webkit-box-shadow: 6px 10px 53px -7px rgba(61,61,61,1);
--moz-box-shadow: 6px 10px 53px -7px rgba(61,61,61,1);
-box-shadow: 6px 10px 53px -7px rgba(61,61,61,1);
+  -webkit-box-shadow: 6px 10px 53px -7px rgba(61, 61, 61, 1);
+  -moz-box-shadow: 6px 10px 53px -7px rgba(61, 61, 61, 1);
+  box-shadow: 6px 10px 53px -7px rgba(61, 61, 61, 1);
 }
 
 .banner {
@@ -140,13 +141,83 @@ box-shadow: 6px 10px 53px -7px rgba(61,61,61,1);
   background-color: var(--document-bg-color);
 }
 
-
 .dialog_container {
   display: flex;
   flex-direction: column;
-  padding: 0.4em;
   width: 32em;
-  background: var(--bg-light-blue);
+  background: var(--bg-white);
   border-radius: 0.5rem;
   box-shadow: 6px 10px 53px -7px var(--shadow-color);
+}
+
+.close {
+  font-size: 2rem;
+  align-self: self-end;
+  margin-right: 0.5rem;
+}
+
+#dialog_body {
+  margin-bottom: 1.5rem;
+  padding: 0 1rem
+}
+
+#dialog_body div {
+  /* background: red; */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.form_container {
+  margin: 1rem 0;
+  font-size: 1.2rem;
+}
+
+.form_container input {
+  border: none;
+  height: 2.5rem;
+}
+.dialog_submit {
+  background-color: var(--bg-accent-color);
+  padding: 0.3rem 0;
+  color: var(--text-off-white);
+  font-size: 1rem;
+  height: 2.5rem;
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+}
+
+/* section */
+.page-item {
+ display: grid;
+ align-items: center;
+ grid-template-columns: 7fr 1fr;
+ margin: 1rem 1rem;
+ -webkit-box-shadow: 5px 6px 17px 0px rgba(91,97,133,0.68);
+-moz-box-shadow: 5px 6px 17px 0px rgba(91,97,133,0.68);
+box-shadow: 5px 6px 17px 0px rgba(91,97,133,0.68);
+ border-radius: 0.5rem;
+ color: var(--text-color);
+}
+
+.page-item_controls {
+  justify-self: center;
+  align-self: center;
+}
+
+.image, .video {
+  display: grid;
+  grid-template-columns: 4fr 3fr;
+  
+}
+
+.image_title, .video_title {
+  /* justify-self: center; */
+  align-self: center;
+  margin-left: 1rem;
+}
+
+.image_thumbnail, .video_iframe {
+  height: 200px;
+  width: 450px;
 }
